--- a/src/Nancy.Cassette.Test/Styles/app/Main.css
+++ b/src/Nancy.Cassette.Test/Styles/app/Main.css
@@ -1,6 +1,6 @@
 ﻿html, body
 {
-  background-color: #f7f7f7;
+  background-image: url(images/lorry.png);
   font-size: .85em;
   font-family: "Trebuchet MS" , Verdana, Helvetica, Sans-Serif;
   margin: 0;
