Static content served by Nancy not munged by Nancy.Cassette. External script module names not included in static content handling.

--- a/src/Nancy.Cassette.Demo.RazorViewEngine/Views/Home.cshtml
+++ b/src/Nancy.Cassette.Demo.RazorViewEngine/Views/Home.cshtml
@@ -8,6 +8,7 @@
 <html>
 <head>
   <title>Nancy.Cassette</title>
+  <img id="banner" src="/Images/tag.png" alt="Banner image not found"><img/>
   @Cassette.UI.Assets.Stylesheets.Render()
 </head>
 <body>
