--- a/src/Nancy.Cassette.Test/Views/RazorHome.cshtml
+++ b/src/Nancy.Cassette.Test/Views/RazorHome.cshtml
@@ -1,5 +1,4 @@
 ﻿@{
-  Cassette.UI.Assets.Scripts.Reference("Scripts/lib");
   Cassette.UI.Assets.Scripts.Reference("Scripts/app");
   Cassette.UI.Assets.Stylesheets.Reference("Styles/app");
 }
@@ -8,6 +7,7 @@
 <html>
 <head>
   <title>Nancy.Cassette</title>
+  <img id="banner" src="/Images/tag.png" alt="Banner image not found" />  
   @Cassette.UI.Assets.Stylesheets.Render()
 </head>
 <body>
