--- a/src/Cassette.Nancy.Test/Views/RazorHome.cshtml
+++ b/src/Cassette.Nancy.Test/Views/RazorHome.cshtml
@@ -8,12 +8,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Nancy.Cassette</title>
+  <title>Cassette.Nancy</title>
   @Bundles.RenderStylesheets()
 </head>
 <body>
-  <h1>Nancy.Cassette</h1>
-  <img src="@Url.Content("~/Images/kitten.jpg")" />  
+  <div id="header"><h1>Cassette.Nancy</h1></div>
+  <div id="body"><img src="@Url.Content("~/Images/kitten.jpg")" /></div>
+  <div id="footer">Copyright</div>
+
   @Bundles.RenderScripts()
+  
+  <script type="text/javascript">
+    $(function () {
+      window.app.layout.init('div#header', 'div#body', 'div#footer');
+    });
+  </script>
 </body>
 </html>
