Working on upgrade testing

--- a/src/Cassette.Nancy.Demo.Autofac/Views/Home.cshtml
+++ b/src/Cassette.Nancy.Demo.Autofac/Views/Home.cshtml
@@ -1,7 +1,8 @@
 ﻿@using Cassette.Views
 @using Nancy
 @{
-  Bundles.Reference("Scripts/app");
+  //Bundles.Reference("Scripts/app");
+  Bundles.Reference("Scripts/lib");
   Bundles.Reference("Styles");
 }
 
