--- a/src/Cassette.Nancy.Demo.MVC3/Views/Home/Index.cshtml
+++ b/src/Cassette.Nancy.Demo.MVC3/Views/Home/Index.cshtml
@@ -1,20 +1,20 @@
 ﻿@{
-  Bundles.Reference("Scripts/app");
-  Bundles.Reference("Styles");
+  Cassette.Views.Bundles.Reference("Scripts/app");
+  Cassette.Views.Bundles.Reference("Styles");
 }
 
 <!DOCTYPE html>
 <html>
 <head>
   <title>Cassette.Nancy</title>
-  @Bundles.RenderStylesheets()
+  @Cassette.Views.Bundles.RenderStylesheets()
 </head>
 <body>
   <div id="header"><h1>Cassette.Nancy</h1></div>
   <div id="body"><img src="@Url.Content("~/Images/kitten.jpg")" /></div>
   <div id="footer">Copyright</div>
 
-  @Bundles.RenderScripts()
+  @Cassette.Views.Bundles.RenderScripts()
   
   <script type="text/javascript">
     $(function () 
