Finished initial upgrade.  All is well.

--- a/src/Cassette.Nancy.Demo.Autofac/Views/Home.cshtml
+++ b/src/Cassette.Nancy.Demo.Autofac/Views/Home.cshtml
@@ -1,19 +1,17 @@
-﻿@using Cassette.Views
-@using Nancy
+﻿@using Cassette.Nancy
 @{
-  //Bundles.Reference("Scripts/app");
-  Bundles.Reference("Scripts/lib");
+  Bundles.Reference("Scripts/app");
   Bundles.Reference("Styles");
 }
 
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Cassette.Nancy</title>
+  <title>Cassette.Nancy.Demo.Autofac</title>
   @Bundles.RenderStylesheets()
 </head>
 <body>
-  <div id="header"><h1>Cassette.Nancy</h1></div>
+  <div id="header"><h1>Cassette.Nancy.Demo.Autofac</h1></div>
   <div id="body"><img src="@Url.Content("~/Images/kitten.jpg")" /></div>
   <div id="footer">Copyright</div>
 
