--- a/src/Cassette.Nancy.Demo.TinyIoC/Views/Home.cshtml
+++ b/src/Cassette.Nancy.Demo.TinyIoC/Views/Home.cshtml
@@ -1,5 +1,4 @@
-﻿@using Cassette.Views
-@using Nancy
+﻿@using Cassette.Nancy
 @{
   Bundles.Reference("Scripts/app");
   Bundles.Reference("Styles");
@@ -8,11 +7,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Cassette.Nancy</title>
+  <title>Cassette.Nancy.Demo.TinyIoC</title>
   @Bundles.RenderStylesheets()
 </head>
 <body>
-  <div id="header"><h1>Cassette.Nancy</h1></div>
+  <div id="header"><h1>Cassette.Nancy.Demo.TinyIoC</h1></div>
   <div id="body"><img src="@Url.Content("~/Images/kitten.jpg")" /></div>
   <div id="footer">Copyright</div>
 
