--- a/src/Cassette.Nancy.Demo.MVC3/Views/Home/Index.cshtml
+++ b/src/Cassette.Nancy.Demo.MVC3/Views/Home/Index.cshtml
@@ -6,11 +6,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Cassette.Nancy</title>
+  <title>Cassette.Nancy.Demo.MVC3</title>
   @Cassette.Views.Bundles.RenderStylesheets()
 </head>
 <body>
-  <div id="header"><h1>Cassette.Nancy</h1></div>
+  <div id="header"><h1>Cassette.Nancy.Demo.MVC3</h1></div>
   <div id="body"><img src="@Url.Content("~/Images/kitten.jpg")" /></div>
   <div id="footer">Copyright</div>
 
